woa this seems to work

--- a/platformio.ini
+++ b/platformio.ini
@@ -14,6 +14,7 @@ board = esp32-c3-devkitm-1
 framework = arduino
 lib_compat_mode = strict
 ;lib_deps = //https://github.com/muki01/I-K_Bus
+lib_deps = just-oblivious/IbusTrx@^2.4.0
 monitor_speed = 115200
 monitor_rts = 0
 monitor_dtr = 0
